--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -Wno-unused-paramete
 # Option pour construire l'exécutable d'exemple
 option(RCNET_BUILD_EXAMPLE "Build the example executable" ON)
 
+# Ajouter le chemin des modules CMake pour les dépendances
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/libjwt/cmake")
+
 # Chemin vers les dépendances
 set(DEPENDENCIES_PATH "${PROJECT_SOURCE_DIR}/dependencies")
 set(CRZGAMES_LIBRARIES_PATH "${DEPENDENCIES_PATH}/Crzgames_Libraries")
