--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,22 +29,11 @@ set(CRZGAMES_LIBRARIES_PATH "${DEPENDENCIES_PATH}/Crzgames_Libraries")
 # Get libraries : CrzGames_Libraries (librairies précompilées qui n'utilise pas CMake)
 find_library(OPENSSL_CRYPTO_LIBRARY NAMES crypto REQUIRED PATHS "${CRZGAMES_LIBRARIES_PATH}/linux/lib/OpenSSL/x64" NO_DEFAULT_PATH)
 find_library(OPENSSL_LIBRARY NAMES ssl REQUIRED PATHS "${CRZGAMES_LIBRARIES_PATH}/linux/lib/OpenSSL/x64" NO_DEFAULT_PATH)
-#find_library(PROTOBUFC_LIBRARY NAMES protobuf-c REQUIRED PATHS "${CRZGAMES_LIBRARIES_PATH}/linux/lib/protobuf-c/x64" NO_DEFAULT_PATH)
-
-# --- LibJWT v3 options ---
-set(WITH_GNUTLS OFF CACHE BOOL "" FORCE)        # Pas GnuTLS
-set(WITH_MBEDTLS OFF CACHE BOOL "" FORCE)       # Pas mbedTLS
-set(WITH_LIBCURL OFF CACHE BOOL "" FORCE)       # Pas de jwks par HTTP
-set(WITH_KCAPI_MD OFF CACHE BOOL "" FORCE)      # Pas de crypto kernel
-set(WITH_TESTS OFF CACHE BOOL "" FORCE)         # Pas de tests unitaires
-set(ENABLE_COVERAGE OFF CACHE BOOL "" FORCE)    # Pas de couverture
-set(EXCLUDE_DEPRECATED ON CACHE BOOL "" FORCE)  # Exclure fonctions dépréciées
-
-# --- Ajouter LibJWT ---
-add_subdirectory(dependencies/libjwt EXCLUDE_FROM_ALL)
+find_library(PROTOBUFC_LIBRARY NAMES protobuf-c REQUIRED PATHS "${CRZGAMES_LIBRARIES_PATH}/linux/lib/protobuf-c/x64" NO_DEFAULT_PATH)
 
 # NATS options
 set(NATS_BUILD_OPENSSL_STATIC_LIBS ON CACHE BOOL "" FORCE)
+
 # Ajouter NATS en tant que sous-répertoire
 add_subdirectory(dependencies/Nats EXCLUDE_FROM_ALL)
 
@@ -54,6 +43,7 @@ set(ENABLE_SSL ON CACHE BOOL "" FORCE)               # Pour activer hiredis_ssl
 set(DISABLE_TESTS ON CACHE BOOL "" FORCE)            # Pas besoin des tests
 set(ENABLE_EXAMPLES OFF CACHE BOOL "" FORCE)         # Pas besoin des exemples
 set(ENABLE_NUGET OFF CACHE BOOL "" FORCE)            # Pas besoin de nuget
+
 # Ajouter hiredis en tant que sous-répertoire
 add_subdirectory(dependencies/hiredis EXCLUDE_FROM_ALL)
 
@@ -115,18 +105,17 @@ target_include_directories(${PROJECT_NAME} PRIVATE
   "${DEPENDENCIES_PATH}/Nats/src"
   "${DEPENDENCIES_PATH}/hiredis"
   "${DEPENDENCIES_PATH}/hiredis/adapters"
-  "${DEPENDENCIES_PATH}/libjwt/include"
 )
 
 # Link les librairies
 target_link_libraries(${PROJECT_NAME}
   SDL3::SDL3
+  ${PROTOBUFC_LIBRARY}
   ${OPENSSL_LIBRARY}
   ${OPENSSL_CRYPTO_LIBRARY}
   hiredis::hiredis
   hiredis::hiredis_ssl
   nats::nats_static
-  jwt_static
 )
 
 if(RCNET_BUILD_EXAMPLE)
@@ -147,19 +136,18 @@ if(RCNET_BUILD_EXAMPLE)
     "${DEPENDENCIES_PATH}/Nats/src"
     "${DEPENDENCIES_PATH}/hiredis"
     "${DEPENDENCIES_PATH}/hiredis/adapters"
-    "${DEPENDENCIES_PATH}/libjwt/include"
     "${PROJECT_SOURCE_DIR}/example/include"
   )
 
   # Link les librairies
   target_link_libraries(rcnet_example
     SDL3::SDL3
+    ${PROTOBUFC_LIBRARY}
     ${OPENSSL_LIBRARY}
     ${OPENSSL_CRYPTO_LIBRARY}
     hiredis::hiredis
     hiredis::hiredis_ssl
     nats::nats_static
-    jwt_static
     ${PROJECT_NAME}
   )
 endif()
